@@ -1,6 +1,4 @@
-DIST freetuxtv-0.4.1.tar.gz 1035389 RMD160 433f40ae336409ec0ec10fdbf9dbd432d74852f1 SHA1 8a3b352b1bcec904124657b796463cbfe10c7ba6 SHA256 e3cb99bff0ed46d3242ec2e50c124c1ebd3e4ab46c8b741f90da0cfd7b4f8704
 DIST freetuxtv-0.4.2.tar.gz 1086090 RMD160 7004185b104a9a0043c7d8bcf24117c389e7fa06 SHA1 dba94113078fbd52656efaa0894e3f37d6d6b8bb SHA256 7f21f9f694b2b3c292830a3c257655542febad067b469486abe3e5131676378f
-EBUILD freetuxtv-0.4.1.ebuild 744 RMD160 0ba0f5ad87dbfed5add7ef500dfe1988de74077a SHA1 bd7ff037a05f9306eadd015110051768c4a83376 SHA256 0b059fc822221c15c5a5c1e8bf4c9fa40bec8e23e10c4516b70307a68109574c
-EBUILD freetuxtv-0.4.2.ebuild 744 RMD160 0ba0f5ad87dbfed5add7ef500dfe1988de74077a SHA1 bd7ff037a05f9306eadd015110051768c4a83376 SHA256 0b059fc822221c15c5a5c1e8bf4c9fa40bec8e23e10c4516b70307a68109574c
-MISC ChangeLog 556 RMD160 5f0adc9909217d24b9addde18fb9b0c8be8995c8 SHA1 cad15542628ab9b887120df5f8712f2e13b02d51 SHA256 d1b005830496652e498f3e813e54337d737b28737def95ee28aff2cd27a56082
+EBUILD freetuxtv-0.4.2.ebuild 737 RMD160 b0eb55e544f45a5a41aba527954dcc285720496d SHA1 9d84295a9f769433e26900d06315059e90e5efdd SHA256 0193a763eda235ba6db45089eeab6f5c3dc027667c978297e8d49ca3c5b70419
+MISC ChangeLog 684 RMD160 1b33b51b66d3ed0039a336e602f0f5afc656b1ba SHA1 fe1b4e995368d783ad62b4b7fda22d9fa35acba7 SHA256 564b969e41650f7f969a329d096972bdad8a9af2b3785cb0da16aab163dfefba
 MISC metadata.xml 342 RMD160 fa5e6d5e9d5f181ef97f0a5d008b808753483af7 SHA1 a1f94abae2fef211579e3328317b391bea6607be SHA256 41fa4311df2383b1d630d39d3dff207bcd2af50b00d0b6b5ef7cb709d24a435f
