@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
+  -freetuxtv-0.4.1.ebuild, freetuxtv-0.4.2.ebuild:
+  Removed old version
+
   18 Mar 2010; Christophe LEFEBVRE (chtof) <chtof62@gmail.com>
   freetuxtv-0.4.1.ebuild, +freetuxtv-0.4.2.ebuild:
   ~adm64 keyword added and version bump 0.4.2
